# deepreader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  Procfile.gemini  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/deepreader/: __init__.py  security.py
backend/src/deepreader/answer/: __init__.py  citations.py  evidence.py  extractive_answerer.py  formatter.py
backend/src/deepreader/api/: main.py  routes_documents.py  routes_jobs.py  routes_qa.py  routes_search.py  routes_summaries.py  upload_safety.py
backend/src/deepreader/ingest/: __init__.py  epub_parser.py  pdf_parser.py  text_parser.py
backend/src/deepreader/records/: __init__.py  chunker.py  ids.py  metadata.py
backend/src/deepreader/retrieval/: bm25.py  fusion.py  indexes.py  lexical.py  schemas.py  vector.py
backend/src/deepreader/storage/: db.py  models.py  (+1 more)
backend/tests/: conftest.py  helpers.py  test_answer_storage.py  test_api_documents.py  test_api_search.py  test_bm25_search.py  test_chunking.py  test_citation_mapping.py  test_cors.py  test_epub_ingest.py  test_evidence_packets.py  test_extractive_answerer.py  test_ingest_granularity.py  test_jobs_api.py  test_local_vector_search.py  test_logging_hygiene.py  test_pdf_ingest.py  test_qa_api.py  test_remote_summary.py  test_retrieval_fusion.py  test_security_hygiene.py  test_stable_ids.py  test_summary_api.py  test_summary_checkpointing.py  test_summary_job_runner.py  test_summary_local.py  test_summary_search.py  test_summary_storage.py  test_text_ingest.py  test_upload_safety.py
(+65 files in other folders)
