[project]
name = "deepreader-backend"
version = "0.1.0"
description = "DeepReader v0.1 backend: deterministic document ingestion and BM25 retrieval."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.110",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
