[project]
name = "deepreader-backend"
version = "0.4.0"
description = "DeepReader backend: deterministic document ingestion, retrieval, summaries, jobs, and local QA."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
